waybar/style.css
@import "./themes/mocha.css";

/* Global */
* {
  /*font-family: "JetBrainsMono NL";*/
  /*font-family: "JetBrainsMono Nerd Font Propo";*/
  font-family: DepartureMono Nerd Font Propo;
  font-size: 0.9rem;
  transition-property: background-color;
  transition-duration: 0.2s;
}

@keyframes blink_red {
  to {
    background-color: @base;
    color: @red;
  }
}

/* .warning, .critical, .urgent { */
/*   animation-name: blink_red; */
/*   animation-duration: 1s; */
/*   animation-timing-function: linear; */
/*   animation-iteration-count: infinite; */
/*   animation-direction: alternate; */
/* } */

#mode, #clock, #memory, #temperature, #cpu, #custom-weather, #workspaces button,
#mpd, #media, #idle_inhibitor, #player, #backlight, #pulseaudio, #network,
#battery, #custom-powermenu, #custom-cava-internal, #cava, #window, #bluetooth,
#custom-launcher, #tray, #disk, #custom-pacman, #custom-scratchpad-indicator,
#custom-todo {
  padding-left: 5px;
  padding-right: 5px;
  padding-top: 0px;
  padding-bottom: 0px;
  margin-top: 2px;
  margin-bottom: 2px;
  margin-left: 1px;
  margin-right: 1px;
  border-radius: 0px;
  color: @base;
}

#mode:hover, #clock:hover, #memory:hover, #temperature:hover, #cpu:hover,
#custom-weather:hover, #mpd:hover, #media #idle_inhibitor
#player:hover, #backlight:hover, #pulseaudio:hover, #network:hover,
#battery:hover, #custom-powermenu:hover, #custom-cava-internal:hover,
#cava:hover, #bluetooth:hover, #custom-launcher:hover, #tray:hover, #disk:hover,
#custom-pacman:hover, #custom-scratchpad-indicator:hover, #window:hover,
#custom-todo:hover {
}


/* Bar */
#left, #right {
  background-color: shade(@crust, 0.9);
  border-radius: 0px;
  border: 2px solid @lavender;
  padding-left: 1px;
  padding-right: 1px;
}

/* #center { */
/*   background-color: transparent; */
  /* background-color: shade(@crust, 0.9); */
/* } */

window#waybar {
  background-color: transparent;
  /* background-color: shade(@mantle, 0.9); */
  /* border-radius: 0px; */
  /* border: 2px solid @lavender; */
}

window > box {
  background-color: transparent;
  margin: .1rem;
  /*margin-bottom: 0;*/
}

/* Workspaces */
#workspaces {
    padding-left: 0;
    padding-right: 0;
}

#workspaces button {
  color: @text;
  font-weight: bold;
  padding-top: 0px;
  padding-bottom: 0px;
  padding-left: .3rem;
  padding-right: .3rem;
  border: 1px solid transparent;
  border-left: 0.5px solid transparent;
  border-right: 0.5px solid transparent;
  border-bottom: 1px solid @rosewater;

}

#workspaces button.active {
  background-color: @sapphire;
  color: @base;
  border-bottom: 1px solid @sapphire;
  border-top: 1px solid @sapphire;

}

#workspaces button:hover {
    background: none;
    box-shadow: none;
    text-shadow: none;
    border: 1px solid @rosewater;
    color: @rosewater;
}

#workspaces button.empty {
    border-bottom: none;
}
#workspaces button.empty:hover {
    border: 1px solid @rosewater;
}

#workspaces .visible {
}

#window {
  background-color: @lavender;
  color: @base;
}

window#waybar.empty #window {
  padding-left: 0;
  padding-right: 0;
}

/* Tooltip */
tooltip {
  border-color: @lavender;
  background-color: @crust;
}

tooltip label {
  color: @rosewater;
}

/* battery */
#battery {
  background-color: @mauve;
  color: @base;
}
#battery.full {
  background-color: @green;
  color: @base;
}
#battery.charging{
  background-color: @teal;
  color: @base;
}
#battery.discharging {
  background-color: @maroon;
  color: @base;
}
#battery.critical:not(.charging) {
  background-color: @red;
  color: @base;
}
#custom-powermenu {
  padding: 0rem;
  padding-right: .6rem;
  padding-left: .6rem;
  color: @base;
  background-color: @red;
  font-weight: bold;
}

#custom-player {
  background-color: @crust;
  color: @lavender;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
}

#custom-player.stopped {
  background-color: transparent;
  border: 0;
  font-size: 0;
  padding: 5px;
}

#custom-media.Stopped {
  background-color: transparent;
}

/* Extra */
#custom-cava-internal, #cava{
  background-color: @peach;
}
#custom-launcher {
  color: @yellow;
}
#memory {
  background-color: @peach;
  min-width: 45px;
}
#cpu {
  background-color: @blue;
  min-width: 45px;
}
#clock {
  background-color: @rosewater;
}
#idle_inhibitor {
  background-color: @yellow;
  padding-left: .6rem;
  padding-right: .6rem;
  min-width: 15px;
}
#temperature {
  background-color: @sapphire;
}
#backlight {
  background-color: @green;
  min-width: 55px;
}
#pulseaudio {
  background-color: @mauve;
  min-width:5px
}
#network { 
  background-color: @pink; /* not active */
  min-width: 170px;
}
#bluetooth {
  padding-left: .6rem;
  padding-right: .6rem;
  background-color: @sky;
}
#bluetooth.connected {
  padding-left: .4rem;
  padding-right: .4rem;
}
#network.disconnected {
  background-color: @base;  /* not active */
  color: @pink;
}
#disk {
  background-color: @maroon;
}
#custom-pacman{
  background-color: @sky;
}
#custom-scratchpad-indicator {
  background-color: @yellow;
}
#custom-weather {
  background-color: @red;
}
#custom-todo {
  background-color: @lavender;
}
#tray {
  background-color: @text;
  color: unset;
}

